Issue #2269: Teaser styling for Drafts. Adjusting z-index.

--- a/core/themes/basis/css/component/node.css
+++ b/core/themes/basis/css/component/node.css
@@ -3,12 +3,19 @@
  * Styling for node content.
  */
 
+.node {
+  position: relative;
+}
+
 /* Display "Draft" watermark on unpublished content. */
+/* See basis_preprocess_node(). */
 .node[data-status]:before {
   content: attr(data-status);
   position: absolute;
-  z-index: -1;
+  z-index: 5;
   width: 100%;
+  top: 20%;
+  pointer-events: none;
   text-align: center;
   text-transform: uppercase;
   font-size: 10em;
